--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="referrer" content="always">
   <link rel="stylesheet" type="text/css" href="https://s.w.org/wp-includes/css/dashicons.css?20160504">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i&amp;subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic">
-  <link rel="stylesheet" href="https://s.w.org/style/wp4.css?61" />
+  <link rel="stylesheet" href="https://s.w.org/style/wp4.css?61">
   <link rel="shortcut icon" href="//s.w.org/favicon.ico?2" type="image/x-icon">
   <script type="text/javascript">
     window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/developer.wordpress.org\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.9-alpha-41553"}};
@@ -25,26 +25,26 @@
       padding: 0 !important;
     }
   </style>
-  <link rel='stylesheet' id='dashicons-css' href='https://developer.wordpress.org/wp-includes/css/dashicons.min.css?ver=4.9-alpha-41553' type='text/css' media='all' />
-  <link rel='stylesheet' id='admin-bar-css' href='https://developer.wordpress.org/wp-includes/css/admin-bar.min.css?ver=4.9-alpha-41553' type='text/css' media='all' />
-  <link rel='stylesheet' id='wporg-handbook-css-css' href='https://developer.wordpress.org/wp-content/plugins/handbook/stylesheets/callout-boxes.css?ver=20161206' type='text/css' media='all' />
-  <link rel='stylesheet' id='open-sans-css' href='https://fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.9-alpha-41553' type='text/css' media='all' />
-  <link rel='stylesheet' id='wporg-developer-style-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/style.css?ver=2' type='text/css' media='all' />
-  <link rel='stylesheet' id='wp-dev-sass-compiled-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/stylesheets/main.css?ver=20170912' type='text/css' media='all' />
-  <link rel='stylesheet' id='awesomplete-css-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/stylesheets/awesomplete.css?ver=20160114' type='text/css' media='all' />
-  <link rel='stylesheet' id='autocomplete-css-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/stylesheets/autocomplete.css?ver=20160114' type='text/css' media='all' />
-  <link rel='stylesheet' id='syntaxhighlighter-core-css' href='https://developer.wordpress.org/wp-content/plugins/syntaxhighlighter/syntaxhighlighter3/styles/shCore.css?ver=3.0.9b' type='text/css' media='all' />
-  <link rel='stylesheet' id='syntaxhighlighter-theme-default-css' href='https://developer.wordpress.org/wp-content/plugins/syntaxhighlighter/syntaxhighlighter3/styles/shThemeDefault.css?ver=3.0.9b' type='text/css' media='all' />
-  <link rel='https://api.w.org/' href='https://developer.wordpress.org/wp-json/' />
-  <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://developer.wordpress.org/xmlrpc.php?rsd" />
+  <link rel='stylesheet' id='dashicons-css' href='https://developer.wordpress.org/wp-includes/css/dashicons.min.css?ver=4.9-alpha-41553' type='text/css' media='all'>
+  <link rel='stylesheet' id='admin-bar-css' href='https://developer.wordpress.org/wp-includes/css/admin-bar.min.css?ver=4.9-alpha-41553' type='text/css' media='all'>
+  <link rel='stylesheet' id='wporg-handbook-css-css' href='https://developer.wordpress.org/wp-content/plugins/handbook/stylesheets/callout-boxes.css?ver=20161206' type='text/css' media='all'>
+  <link rel='stylesheet' id='open-sans-css' href='https://fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.9-alpha-41553' type='text/css' media='all'>
+  <link rel='stylesheet' id='wporg-developer-style-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/style.css?ver=2' type='text/css' media='all'>
+  <link rel='stylesheet' id='wp-dev-sass-compiled-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/stylesheets/main.css?ver=20170912' type='text/css' media='all'>
+  <link rel='stylesheet' id='awesomplete-css-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/stylesheets/awesomplete.css?ver=20160114' type='text/css' media='all'>
+  <link rel='stylesheet' id='autocomplete-css-css' href='https://developer.wordpress.org/wp-content/themes/pub/wporg-developer/stylesheets/autocomplete.css?ver=20160114' type='text/css' media='all'>
+  <link rel='stylesheet' id='syntaxhighlighter-core-css' href='https://developer.wordpress.org/wp-content/plugins/syntaxhighlighter/syntaxhighlighter3/styles/shCore.css?ver=3.0.9b' type='text/css' media='all'>
+  <link rel='stylesheet' id='syntaxhighlighter-theme-default-css' href='https://developer.wordpress.org/wp-content/plugins/syntaxhighlighter/syntaxhighlighter3/styles/shThemeDefault.css?ver=3.0.9b' type='text/css' media='all'>
+  <link rel='https://api.w.org/' href='https://developer.wordpress.org/wp-json/'>
+  <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://developer.wordpress.org/xmlrpc.php?rsd">
 {% comment %}
-  <link rel="prev" title='Theme Handbook' href='https://developer.wordpress.org/themes/' />
-  <link rel="next" title='Who Should Read This Handbook?' href='https://developer.wordpress.org/themes/getting-started/who-should-read-this-handbook/' />
+  <link rel="prev" title='Theme Handbook' href='https://developer.wordpress.org/themes/'>
+  <link rel="next" title='Who Should Read This Handbook?' href='https://developer.wordpress.org/themes/getting-started/who-should-read-this-handbook/'>
 {% endcomment %}
-  <link rel="canonical" href="https://developer.wordpress.org/themes/getting-started/" />
-  <link rel="shortlink" href='https://developer.wordpress.org/?p=5794' />
-  <link rel="alternate" type="application/json+oembed" href="https://developer.wordpress.org/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdeveloper.wordpress.org%2Fthemes%2Fgetting-started%2F" />
-  <link rel="alternate" type="text/xml+oembed" href="https://developer.wordpress.org/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdeveloper.wordpress.org%2Fthemes%2Fgetting-started%2F&#038;format=xml" />
+  <link rel="canonical" href="https://developer.wordpress.org/themes/getting-started/">
+  <link rel="shortlink" href='https://developer.wordpress.org/?p=5794'>
+  <link rel="alternate" type="application/json+oembed" href="https://developer.wordpress.org/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdeveloper.wordpress.org%2Fthemes%2Fgetting-started%2F">
+  <link rel="alternate" type="text/xml+oembed" href="https://developer.wordpress.org/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fdeveloper.wordpress.org%2Fthemes%2Fgetting-started%2F&#038;format=xml">
     <style>
       @media screen and (max-width: 782px) {
         #wpadminbar li#wp-admin-bar-log-in,
